--- a/index.html
+++ b/index.html
@@ -16,27 +16,39 @@
           'area6 area4 area7';
         gap: 2px;
         padding:2px;
+        border: 2px solid black;
+      }
+      .mydiv:hover{
+        background-color: blueviolet;
       }
        #img1{
         grid-area: area1;
+        border: 2px solid black;
        }
        #img2{
         grid-area: area2;
+        border: 2px solid black;
+        
        }
        #img3{
         grid-area: area3;
+        border: 2px solid black;
        }
        #img4{
         grid-area: area4;
+        border: 2px solid black;
        }
        #img5{
         grid-area: area5;
+        border: 2px solid black;
        }
        #img6{
         grid-area: area6;
+        border: 2px solid black;
        }
        #img7{
         grid-area: area7;
+        border: 2px solid black;
        }
       
     </style>
